# schwabcpp

./: .gitignore  .gitmodules  CMakeLists.txt
include/schwabcpp/: client.h  streamerField.h
include/schwabcpp/event/: event.h  eventBase.h  oAuthCompleteEvent.h  oAuthUrlRequestEvent.h
include/schwabcpp/schema/: accessTokenResponse.h  accountSummary.h  candle.h  candleList.h  marketHours.h  refreshTokenResponse.h  registrationHelper.h  schema.h  userPreference.h
include/schwabcpp/types/: frequencyType.h  marketType.h  periodType.h
include/schwabcpp/utils/: clock.h  timer.h
src/: app.h  app.mm  client.cpp  client.h  main.cpp  streamer.cpp  streamer.h  streamerField.cpp  streamerField.h  websocket.cpp  websocket.h  websocketSession.cpp  websocketSession.h
src/backend/: context.h  context.mm  metalcpp.mm
src/client/: client.cpp  client.h  streamer.cpp  streamer.h  websocket.cpp  websocket.h  websocketSession.cpp  websocketSession.h
src/event/: event.h  eventBase.h  oAuthCompleteEvent.h  oAuthUrlRequestEvent.h  windowCloseEvent.h
src/imguiImpl/: imconfig.h  imguiImpls.cpp  imguiImpls.mm
src/main/: main.cpp
src/schema/: accessTokenResponse.cpp  accessTokenResponse.h  accountSummary.cpp  accountSummary.h  candle.cpp  candle.h  candleList.cpp  candleList.h  marketHours.cpp  marketHours.h  refreshTokenResponse.cpp  refreshTokenResponse.h  registrationHelper.h  schema.h  userPreference.cpp  userPreference.h
src/types/: frequencyType.cpp  frequencyType.h  marketType.cpp  marketType.h  periodType.cpp  periodType.h
src/ui/: uiLayer.cpp  uiLayer.h  window.cpp  window.h
src/utils/: clock.h  logger.cpp  logger.h  timer.h
